# plinking_duck

./: .gitignore  .gitmodules  .readthedocs.yaml  CLAUDE.md  CMakeLists.txt  Makefile  PLAN.md  README.md  extension_config.cmake  mkdocs.yml  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
benchmarks/: plinking_duck_ld_benchmark.Rmd  plinking_duck_ld_benchmark.md  plinking_duck_ld_benchmark_all_hg38.csv  plinking_duck_ld_benchmark_plink2.csv  plinking_duck_ld_benchmark_raw.csv  plinking_duck_ld_benchmark_summary.csv
docs/: common-parameters.md  development.md  file-formats.md  genotype-encoding.md  getting-started.md  index.md  tutorial.md
docs/functions/: index.md  plink_freq.md  plink_glm.md  plink_hardy.md  plink_ld.md  plink_missing.md  plink_score.md  read_pfile.md  read_pgen.md  read_plink_vcf.md  read_psam.md  read_pvar.md
docs/guides/: file-handling.md  optimizations.md  performance.md  quality-control.md
docs/planning/: DESIGN-GUIDE  P0-002-template-cleanup  P0-003-duckhts-lessons-and-patterns  P0-003-pgenlib-build-integration  P0-004-build-validation  P0-004-pgenlib-build-integration  P0-005-build-validation  P1-001-read-pvar  P1-002-read-psam  P1-003-read-pgen  P1-004-read-pfile  P1-005-integration-documentation  P1-006-p2-utility-function-planning  P1-006-research-summary  P10-001-filter-pushdown  P11-001-attach-pfile-catalog  P12-001-implementation-notes  P12-001-remote-vfs-pgen-reads  P2-001-plink-freq  P2-002-plink-hardy  P2-003-plink-missing  P2-004-plink-ld  P2-005-plink-score  P2-006-plink-glm  P2-007-plink-phenotype  P3-001-streaming-and-threading  P3-002-genotype-orient-parallelism  P3-002-plink-het  P3-003-plink-fst  P3-004-plink-pca  P3-005-plink-king  P3-006-plink-indep  P3-007-write-pfile  P3-008-plink-clump  P4-001-orient-genotypes-redesign  P4-002-dosage-output  P4-003-genotype-filter-pushdown  P4-004-flexible-companion-sources  P5-001-read-vcf  P6-001-plink-pca  (+8 more)
docs/superpowers/plans/: 2026-03-12-genotype-range-filter.md  2026-05-05-read-plink-vcf.md
docs/superpowers/specs/: 2026-05-05-read-plink-vcf-design.md
patches/plink-ng/: 0001-pgen-vfs-fopen-hook.patch  README.md
scripts/: README.md  bench_sample_counts_sparse.sh  check_vendored_drift.sh
src/: musl_compat.h  pfile_reader.cpp  pgen_reader.cpp  pgen_vfs_opener.cpp  pgen_vfs_opener.hpp  plink2_glm_logistic_math.cpp  plink_common.cpp  plink_freq.cpp  plink_glm.cpp  plink_hardy.cpp  plink_ld.cpp  plink_missing.cpp  plink_pca.cpp  plink_score.cpp  plinking_duck_extension.cpp  plinking_pgen_vfs.cpp  plinking_pgen_vfs.hpp  psam_reader.cpp  pvar_reader.cpp  vcf_genotype_parse.cpp  vcf_reader.cpp
src/include/: duckdb_compat.hpp  pfile_reader.hpp  pgen_reader.hpp  plink2_glm_logistic_math.hpp  plink_common.hpp  plink_freq.hpp  plink_glm.hpp  plink_hardy.hpp  plink_ld.hpp  plink_missing.hpp  plink_pca.hpp  plink_profile.hpp  plink_score.hpp  plinking_duck_extension.hpp  psam_reader.hpp  pvar_reader.hpp  vcf_genotype_parse.hpp  vcf_reader.hpp
test/data/: .gitignore  all_missing.pgen  all_missing.psam  all_missing.pvar  bad_header.psam  benchmark_psam_projection.sh  comments.pvar  dosage_example.pgen  dosage_example.pvar  example.bim  example.fam  example.pvar  example.vcf  generate_glm_stress_data.sh  generate_large_sample_fixture.sh  generate_pca_data.sh  generate_rare_test_data.sh  generate_sexchr_test_data.sh  generate_shard_test_data.sh  generate_streaming_test_data.sh  generate_test_data.sh  generate_wes_test_data.py  glm_pheno_example.psam  header_only.psam  header_only.pvar  large_example.pgen  large_example.pvar  minimal.psam  minimal.pvar  mismatched_samples.psam  mismatched_variants.pvar  no_fid.psam  optional_cols.pvar  pca_example.pgen  pca_example.psam  pca_example.pvar  pfile_example.pgen  pfile_example.psam  pfile_example.pvar  pgen_example.bim  (+35 more)
test/sql/: edge_cases.test  flexible_companions.test  integration.test  parallel_correctness.test  parquet_companions.test  plink_freq.test  plink_freq_dosage.test  plink_freq_negative.test  plink_glm.test  plink_glm_negative.test  plink_glm_pthreshold.test  plink_hardy.test  plink_hardy_negative.test  plink_ld.test  plink_ld_negative.test  plink_ld_window.test  plink_missing.test  plink_missing_negative.test  plink_missing_sample.test  plink_pca.test  plink_pca_negative.test  plink_score.test  plink_score_negative.test  plink_sexchr.test  plinking_duck.test  plinking_max_threads.test  read_file_search_path.test  read_pfile.test  read_pfile_dosage.test  read_pfile_filter.test  read_pfile_genotype_filter.test  read_pfile_genotype_orient.test  read_pfile_genotypes.test  read_pfile_genotypes_columns.test  read_pfile_genotypes_columns_negative.test  read_pfile_genotypes_counts.test  read_pfile_genotypes_counts_negative.test  read_pfile_genotypes_negative.test  read_pfile_genotypes_stats.test  read_pfile_genotypes_struct.test  (+40 more)
